Se agrega Edición

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="btn btn-primary" href="./admin" role="button">Nueva</a>
+    <a class="btn btn-outline-light" href="/" role="button">Home</a>
+    <span class="navbar-text">
+      Foro Multitemático
+    </span>
   </div>
 </nav>
