--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,11 +1,11 @@
 <%-include('partials/header')  %>
-<!-- <%-include('partials/navbar')  %> -->
+<%-include('partials/navbar')  %>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="btn btn-primary" href="./" role="button">Volver</a>
     </div>
-  </nav>
+  </nav> -->
     <div class="container mt-5">
         <div class="row">
             <div class="col">
