--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,12 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="text-center py-3">Lista de Publicaciones</h1>
+                <h1 class="text-center py-3">Publicaciones</h1>
+            </div>
+        </div>   
+        <div class="row">
+            <div class="col py-2 text-center pb-3">
+                <a class="btn btn-outline-info" href="/admin" role="button">Nueva publicación</a>
             </div>
         </div>
         
